# pom_localization

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  manifest.xml
src/: autodiff_gp_main.cc
src/base_lib/: pose_reps.h  pose_utils.h
src/evaluation/: compute_kitti_results.cc  compute_kitti_results_for_seq.sh  compute_waypoint_consistency_results.cc  consistency_results_plotting_setup.sh  convert_object_detections_from_yaml.cc  create_distribution_from_global_obj_poses.cc  create_distribution_from_global_obj_poses_multiple_car_selection_profiles.cc  create_global_obj_locations_from_3d_parking_spots.cc  create_local_detections_from_global_detections.cc  distribution_generation_config_writer.cc  distribution_generation_config_writer_multiple_placement_profile.cc  evaluation_main.cc  fake_pom_plotter.cc  find_node_ids_for_objs_and_waypoints_with_timestamps.cc  interpolate_waypoint_nodes_in_existing_traj.cc  kitti_to_trajectory_2d.cc  lidar_odom_to_trajectory_2d.cc  lidar_odom_to_trajectory_2d_with_timestamps.cc  parking_spot_3d_plotter.cc  plot_optimized_with_detections.cc  plot_results.cc  plot_waypoint_consistency_results.py  runtime_params_config_writer.cc  runtime_params_evaluator.sh  waypoint_trigger_extractor.py  wheel_odom_rosbag_extraction.cc
src/evaluation/convenience_scripts/: aggregated_obj_det_plotting.sh  carto_trajectory_processor.sh  compute_kitti_results_for_seq.sh  consistency_results_plotting_setup.sh  create_distributions_from_multi_prof_config_all_kitti.sh  enml_trajectory_processor.sh  runtime_params_evaluator.sh  set_preprocess_params.sh
src/file_io/: clustering_config_io.h  file_io_utils.h  kitti_calib_io.h  kitti_poses_io.h  lidar_odom.h  node_id_and_timestamp_io.h  obj_yaml_reader.h  object_instances_observed_at_poses_io.h  object_positions_by_pose_io.h  object_positions_by_timestamp.h  object_positions_by_timestamp_io.h  parking_spot_io.h  past_sample_io.h  pose_3d_io.h  runtime_params_config_io.h  semantic_index_to_string_map_io.h  semantic_point_io.h  semantic_point_object_sampler_config_io.h  semantic_point_with_node_id_io.h  semantic_point_with_timestamp_io.h  shape_dimensions_2d_by_semantic_class_io.h  synthetic_distribution_generation_config_io.h  synthetic_distribution_generation_config_multiple_car_selection_profiles.h  trajectory_2d_by_timestamp.h  trajectory_2d_io.h  waypoint_consistency_results_io.h  waypoints_and_node_id.h  waypoints_and_timestamp_io.h  wheel_odom.h
src/gaussian_process/: gp_classifier.h  gp_regression.h  kernel_density_estimator.h
src/gaussian_process/kernel/: gaussian_kernel.h  kernel.h  periodic_gaussian_kernel.h  pose_2d_kernel.h
src/h3d_dataset/: README.md  dataset_odom.h  gps.h  h3d_file_operations.h  lidar_odom.h  obj_detections.h  output_first_gps_entries.cc  point_cloud.h  read_h3d_point_cloud.cc  run_on_h3d_detections.cc
src/h3d_dataset/gps_preprocessing/: geonav_conversions.py  preprocess_gps_files.py
src/pose_optimization/: angle_local_parameterization.h  ceres_math_utils.h  movable_observation_gp_cost_functor.h  movable_pose_optimization_test_main.cc  odometry_2d_cost_functor.h  odometry_3d_cost_functor.h  odometry_cost_functor.h  pose_2d_factor_graph.h  pose_3d_factor_graph.h  pose_graph_generic.h  pose_graph_generic_2d_distribution.h  pose_graph_optimizer.h  pose_graph_semantic_points.h  pose_optimization_main.cc  pose_optimization_parameters.h  sample_based_movable_observation_gp_cost_functor_2d.h  sample_based_movable_observation_gp_cost_functor_3d.h
src/pose_optimization/offline/: ceres_visualization_callback_2d.h  ceres_visualization_callback_semantic_points_2d.h  offline_problem_data.h  offline_problem_runner.h
src/pose_optimization/uncertainty_aware/: uncertainty_aware_pose_opt_utils.h
src/pose_optimization/utils/: pose_graph_creation_utils.h
src/semantic_point_based_pom/: find_node_ids_for_semantic_points_and_waypoints_with_timestamps.cc  past_sample_publisher.cc  plot_single_traj_odom_est_and_semantic_points.cc  rectangle_sampler.h  semantic_point_evaluation_main.cc  wheel_odom_rosbag_extraction_semantic_points.cc
src/semantic_point_based_pom/convenience_scripts/kitti/: compute_kitti_results_for_seq.sh
src/semantic_point_based_pom/convenience_scripts/parking_lot/: past_sample_plotter.sh  plot_single_traj_with_detections.sh  preprocess_parking_lot_data_all_seqs.sh  preprocess_parking_lot_data_for_seq.sh  runtime_params_evaluator.sh
src/semantic_segmentation/: clustering.h  point_cloud_label_utils.h  point_cloud_labeler_from_cluster_heuristics.cpp  point_cloud_semantic_labeler_from_image.cpp
src/synthetic_problem/: movable_pose_optimization_test_main.cc  parking_lot_simulator.h  synthetic_problem_config_2d.h  synthetic_problem_runner_2d.h
src/synthetic_problem/uncertainty_aware/: uncertainty_aware_synthetic_problem.h  uncertainty_aware_synthetic_problem_localization_test_main.cc
src/visualization/: ros_visualization.h
